# kaikei-rs

./: Cargo.toml  README.md
.github/workflows/: pages.yml
src/: lib.rs  wasm.rs
src/tax/: consumption.rs  corporate.rs  income.rs  mod.rs  tables.rs
tests/: consumption_test.rs  corporate_test.rs  income_test.rs
web/: index.html
